--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -45,8 +45,14 @@ set(UNIX_LIBFILES
 
 if(MSVC)
   set(LIBFILES ${BASE_LIBFILES})
+  set(HAVE_STDIO 0)
+  set(HAVE_SERIALDEV 0)
+  set(HAVE_PTY 0)
 else()
   set(LIBFILES ${BASE_LIBFILES} ${UNIX_LIBFILES})
+  set(HAVE_STDIO 1)
+  set(HAVE_SERIALDEV 1)
+  set(HAVE_PTY 1)
 endif()
 
 add_library(gensio ${LIBFILES})
