More fixes for building on Windows
Getting rid of a bunch of unnecessary include in ipmisol

cmake changes

Signed-off-by: Corey Minyard <cminyard@mvista.com

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -43,16 +43,16 @@ set(UNIX_LIBFILES
   uucplock.c
   gensio_pty.c)
 
-if(MSVC)
-  set(LIBFILES ${BASE_LIBFILES})
-  set(HAVE_STDIO 0)
-  set(HAVE_SERIALDEV 0)
-  set(HAVE_PTY 0)
-else()
+if(UNIX)
   set(LIBFILES ${BASE_LIBFILES} ${UNIX_LIBFILES})
   set(HAVE_STDIO 1)
   set(HAVE_SERIALDEV 1)
   set(HAVE_PTY 1)
+else()
+  set(LIBFILES ${BASE_LIBFILES})
+  set(HAVE_STDIO 0)
+  set(HAVE_SERIALDEV 0)
+  set(HAVE_PTY 0)
 endif()
 
 add_library(gensio ${LIBFILES})
