Fix windows build issues
Mostly errors in the cmake files.

Also some issues in gensiotool.c, ifdef unixisms.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,9 @@ option(USE_UUCP_LOCKING "Enable UUCP lock file handling for devices" ON)
 option(ENABLE_TCP_WRAPPERS "Enable tcpwrappers support" ON)
 if(ENABLE_TCP_WRAPPERS)
   CHECK_INCLUDE_FILE(tcpd.h HAVE_TCPD_H)
+  if(HAVE_TCPD_H)
     list(APPEND EXTRA_LIBS wrap)
+   endif()
 endif()
 
 option(ENABLE_PTHREADS "Enable pthreads" ON)
@@ -128,7 +130,9 @@ if(SWIG_FOUND)
   add_subdirectory(swig)
 endif()
 add_subdirectory(man)
+if(UNIX)
 add_subdirectory(tests)
+endif()
 
 set(CPACK_SOURCE_GENERATOR "TGZ")
 set(CPACK_SOURCE_PACKAGE_FILE_NAME
