Fix a few more compile issues
Define strcasecmp() if it is not available.

Make sure the standard unix devices get defined in the right place so
they get put into the config file.

Fix some compile issues in oomtest.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,17 @@ check_c_source_compiles("int main()
 }" HAVE_GCC_ATOMICS)
 
 check_symbol_exists(isatty unistd.h HAVE_ISATTY)
+check_symbol_exists(strcasecmp string.h HAVE_STRCASECMP)
+
+if(UNIX)
+  set(HAVE_STDIO 1)
+  set(HAVE_SERIALDEV 1)
+  set(HAVE_PTY 1)
+else()
+  set(HAVE_STDIO 0)
+  set(HAVE_SERIALDEV 0)
+  set(HAVE_PTY 0)
+endif()
 
 configure_file(config.h.cmake config.h)
 
