Implement strncasecmp if it is not available
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,6 +120,7 @@ check_c_source_compiles("int main()
 
 check_symbol_exists(isatty unistd.h HAVE_ISATTY)
 check_symbol_exists(strcasecmp string.h HAVE_STRCASECMP)
+check_symbol_exists(strncasecmp string.h HAVE_STRNCASECMP)
 
 if(UNIX)
   set(HAVE_STDIO 1)
