Get rid of the last os-specific types in the interface
Use unsigned long, not size_t, to define gensiods.

Create a new gensio_time type to replace struct timeval.

These are hopefully the last API changes that have to be made for a long
time, but are required to use this on systems besides *nix.

Pull the waiter code into gensio_selector and remove it's public
interface.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -9,7 +9,7 @@ noinst_HEADERS = telnet.h heap.h utils.h uucplock.h buffer.h \
 libgensio_la_SOURCES = \
 	gensio.c gensio_osops.c gensio_net.c gensio_udp.c gensio_stdio.c \
 	sergensio.c sergensio_telnet.c sergensio_serialdev.c uucplock.c \
-	gensio_selector.c waiter.c \
+	gensio_selector.c \
 	gensio_ssl.c gensio_base.c gensio_filter_ssl.c \
 	gensio_filter_telnet.c telnet.c buffer.c \
 	gensio_ll_fd.c gensio_ll_gensio.c gensio_acc.c gensio_acc_gensio.c \
