Use AX_PTHREAD to autodetect pthread support
Signed-off-by: James Hilliard <james.hilliard1@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -63,8 +63,11 @@ AC_ARG_WITH(pthreads,
 )
 
 if test "x$use_pthreads" != "xno"; then
-   LIBS="$LIBS -lpthread"
-   AC_DEFINE([USE_PTHREADS], [], [Enable multithreaded support])
+   AX_PTHREAD
+   if test "x$use_pthreads$ax_pthread_ok" = "xyesno"; then
+      AC_MSG_FAILURE([--with-pthreads was given, but no working pthread library was found])
+   fi
+   AM_CONDITIONAL([USE_PTHREADS], [test "x$ax_pthread_ok" = "xyes"])
 fi
 
 AC_ARG_WITH(openipmiflags,
@@ -88,7 +91,7 @@ if test "x$tryopenipmi" != "xno"; then
 fi
 
 if test "x$HAVE_OPENIPMI" != "xno"; then
-   if test "x$use_pthreads" == "xyes"; then
+   if test "x$ax_pthread_ok" == "xyes"; then
       LIBS="$LIBS -lOpenIPMI -lOpenIPMIpthread -lOpenIPMIutils"
    else
       LIBS="$LIBS -lOpenIPMI -lOpenIPMIposix -lOpenIPMIutils"
