Fix pthread autoconf detection and setup
A recent change to use ax_pthread.m4 had some issues with actually
enabling pthread support.  Set the proper variables and use AC_DEFINE,
no AM_CONDITIONAL, as AM_CONDITIONAL doesn't add anything to config.h.

Fixes: 4a0a0aa600d4 "Use AX_PTHREAD to autodetect pthread support"
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -39,8 +39,10 @@ AC_ARG_WITH(openipmi,
 )
 
 use_pthreads=yes
+use_pthreads_set=false
 AC_ARG_WITH(pthreads,
 [  --with-pthreads=yes|no      Use pthreads or not.],
+    use_pthreads_set=true
     if test "x$withval" = "xyes"; then
       use_pthreads=yes
     elif test "x$withval" = "xno"; then
@@ -49,11 +51,14 @@ AC_ARG_WITH(pthreads,
 )
 
 if test "x$use_pthreads" != "xno"; then
-   AX_PTHREAD
-   if test "x$use_pthreads$ax_pthread_ok" = "xyesno"; then
-      AC_MSG_FAILURE([--with-pthreads was given, but no working pthread library was found])
-   fi
-   AM_CONDITIONAL([USE_PTHREADS], [test "x$ax_pthread_ok" = "xyes"])
+   AX_PTHREAD(
+      [LIBS="$LIBS $PTHREAD_LIBS"
+       CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
+       CC="$PTHREAD_CC"
+       AC_DEFINE([USE_PTHREADS], [], [Enable multithreaded support])],
+      [if $use_pthreads_set; then
+          AC_MSG_FAILURE([--with-pthreads was given, but no working pthread library was found])
+       fi])
 fi
 
 AC_ARG_WITH(openipmiflags,
