Add a --disable-doc option to not install man pages
Suggested by James Hilliard, who sent a patch a stole a bunch of stuff
from.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,10 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = lib include $(SWIG_DIR) tests tools man examples
+SUBDIRS = lib include $(SWIG_DIR) tests tools examples
+if INSTALL_DOC
+SUBDIRS += man
+endif
 
 DIST_SUBDIRS = lib swig include tests tools man examples
 
