--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -36,7 +36,11 @@ gtlssh_LDADD = libgtlssh.a libgensiotool.a $(top_builddir)/lib/libgensio.la \
 gtlsshd_LDADD = libgtlssh.a libgensiotool.a $(top_builddir)/lib/libgensio.la \
 	@PAMLIB@ @OPENSSL_LIBS@
 
-man_MANS = gensiot.1 gtlsshd.8 gtlssh.1 gtlssh-keygen.1
+manpages = gensiot.1 gtlsshd.8 gtlssh.1 gtlssh-keygen.1
 
-EXTRA_DIST = $(man_MANS) gtlssh-keygen.in CMakeLists.txt
+if INSTALL_DOC
+man_MANS = gensiot.1 gtlsshd.8 gtlssh.1 gtlssh-keygen.1
+endif
+
+EXTRA_DIST = $(manpages) gtlssh-keygen.in CMakeLists.txt
 
