osops: Allow the OS to choose the ephemeral port if it can
Only for Linux for now, but if the port is set to zero on a listen
socket, let the OS choose the port if it is capable.  Otherwise fall
back to the scanning code.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,8 @@ if(HAVE_LIBSCTP)
   CHECK_LIBRARY_EXISTS(sctp "sctp_sendv" "" HAVE_SCTP_SENDV)
 endif()
 
+string(COMPARE EQUAL "${CMAKE_HOST_SYSTEM_NAME}" "Linux" HAVE_WORKING_PORT0)
+
 CHECK_LIBRARY_EXISTS(pam "pam_start" "" HAVE_PAM)
 
 check_symbol_exists(TIOCSRS485 sys/ioctl.h HAVE_DECL_TIOCSRS485)
