tools: Add a gtlssync script
A convenience wrapper to run rsync over gtlssh.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -314,15 +314,18 @@ AC_DEFINE_UNQUOTED([HAVE_WORKING_PORT0], [$HAVE_WORKING_PORT0],
 AC_SUBST(HAVE_WORKING_PORT0)
 
 GTLSSH=
+GTLSSYNC=
 GTLSSHD=
 if test $HAVE_OPENSSL -eq 1; then
    if test $HAVE_PAM -eq 1; then
       GTLSSHD=gtlsshd
    fi
    GTLSSH=gtlssh
+   GTLSSYNC=gtlssync
 fi
 AC_SUBST(GTLSSHD)
 AC_SUBST(GTLSSH)
+AC_SUBST(GTLSSYNC)
 
 AC_CHECK_MEMBER([struct termios2.c_ispeed],
 	[AC_DEFINE([HAVE_TERMIOS2], [1], [termios2 is present])],
