conacc: Add an accepter for doing a connection inside an accepter
Create an accepter that takes a gensio as an argument.  When started,
open the gensio and when it's open return it as a new child from the
accepter.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -31,7 +31,10 @@ set(BASE_LIBFILES
   utils.c
   gensio_filter_relpkt.c
   gensio_sctp.c
-  gensio_filter_ssl.c)
+  gensio_filter_ssl.c
+  gensio_perf.c
+  gensio_filter_perf.c
+  gensio_conacc.c)
 
 set(UNIX_LIBFILES
   gensio_stdio.c
