--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -20,7 +20,7 @@ libgensio_la_SOURCES = \
 	gensio_filter_msgdelim.c gensio_msgdelim.c \
 	gensio_filter_relpkt.c gensio_relpkt.c \
 	gensio_filter_trace.c gensio_trace.c \
-	gensio_filter_perf.c gensio_perf.c
+	gensio_filter_perf.c gensio_perf.c gensio_conacc.c
 
 libgensio_la_LDFLAGS = $(OPENSSL_LIBS)
 
