pty: Add a way to just create a pty without a process
This will let you create a pty and have another program attach to it.
You can get the pty device with GENSIO_CONTROL_LPORT.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -304,6 +304,7 @@ fi
 AC_SUBST(PAMLIB)
 
 AC_CHECK_FUNCS(getrandom)
+AC_CHECK_FUNCS(ptsname_r)
 
 case $host_os in
 linux*) HAVE_WORKING_PORT0=1 ;;
